# ship-stowage-model

./: CMakeLists.txt  README.md  ShipStowage.xlsx  TODOS  gittik.md  init.sh  makefile  students.txt
resources/draftFolder/formats/: aaaaa_1.cargo_data.txt  output_exapmle.txt
resources/draftFolder/noCargoFilesTravel/: routeFile.csv
resources/simulationFolder/noCargoFilesTravel/: shipPlan.csv
resources/simulationFolder/travel1/: bbbbb_2.cargo_data  routeFile.csv  shipPlan.csv  shipPlan.txt
resources/simulationFolder/travel2/: aaaaa_1.cargo_data  aaaaa_1.out_cargo_data  aaaaa_2.cargo_data  aaaaa_2.out_cargo_data  aaaaa_3.cargo_data  bbbbb_1.cargo_data  bbbbb_1.out_cargo_data  bbbbb_2.cargo_data  bbbbb_2.out_cargo_data  ccccc_1.cargo_data  ccccc_1.out_cargo_data  ccccc_2.cargo_data  ddddd_1.out_cargo_data  shipPlan.csv
src/: AbstractAlgorithm.h  AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  AlgorithmValidator.cpp  AlgorithmValidator.h  Container.cpp  Container.h  ErrorHandling.cpp  ErrorHandling.h  NaiveAlgorithm.cpp  NaiveAlgorithm.h  Port.cpp  Port.h  Ship.cpp  Ship.h  Simulation.cpp  Simulation.h  StowageAlgorithm.cpp  StowageAlgorithm.h  Utils.cpp  Utils.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h  adsad.cpp  adsad.h  blal.cpp  blal.h  main.cpp  makefile
src/Algorithms/: NaiveAlgorithm.cpp  NaiveAlgorithm.h  _317624278_a.cpp  _317624278_a.h  _317624278_b.cpp  _317624278_b.h  makefile
src/Common/: AlgorithmValidator.cpp  AlgorithmValidator.h  Container.h  EnviormentConfig.h  ErrorHandling.h  Port.cpp  Port.h  Ship.h  Utils.cpp  Utils.h
src/Interfaces/: AbstractAlgorithm.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  WeightBalanceCalculator.cpp
src/Simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  Simulation.cpp  Simulation.h  main.cpp  makefile
src/algorithm/: GoodAlgorithm.cpp  GoodAlgorithm.h  NaiveAlgorithm.cpp  NaiveAlgorithm.h  _317624278_a.h  _317624278_b.h  makefile
src/common/: AlgorithmValidator.cpp  AlgorithmValidator.h  Container.cpp  EnviormentConfig.h  ErrorHandling.h  Port.cpp  Port.h  Ship.h  Utils.cpp  Utils.h  ctpl_stl.h
src/interfaces/: AlgorithmRegistration.cpp
src/simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistration.cpp  Simulation.cpp  Simulation.h  WeightBalanceCalculator.cpp  main.cpp  makefile
submisson/: README.md  bonus.txt
submisson/bonus_folder/: ErrorHandling.h  run_all_travels.sh  simulator
tests/_output/: simulation.results
tests/exTravels3/: run_me
tests/so_algorithms/: chenmo_simulator  hendler_simulator  new_2_hendler_simulator  simulator
tests/test_bad_port_symbol_bad_container_id_bad_weight_bad_containerport_dup_id_on_port/: simulation.ship_plan
tests/test_dup_loc_dif_val/: simulation.ship_plan
tests/test_invalid_travel/: ILHFA_0.cargo_data  simulation.route_file
tests/test_no_route_file/: ABCDE-1.cargo_data
tests/test_no_ship_plan/: ABCDE-2.cargo_data
tests/test_recurrent_ports_travel/: ABCDF_1.cargo_data  ABCDJ_1.cargo_data
tests/test_wrong_ship_plan/: simulation.ship_plan
(+167 files in other folders)
